test/spec_vectors/simd_f64x2_cmp/fail/module_20.wat
(module (func $f64x2.le-arg-empty (result v128) (f64x2.le)))